--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-  <h1>Hello, world!</h1>
-
+  <h1>HTML Club<br>
+    <span>the club for pogramers.</span>
+  </h1>
 </body>
 </html>
