--- a/Home.html
+++ b/Home.html
@@ -5,11 +5,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="Home.css">
 </head>
 <body>
+  <header>
+    <nav>
+      <ul class="nav-ul">
+        <li class="nav-li"><a href="">how</a></li>
+        <li class="nav-li"><a href="">cat</a></li>
+        <li class="nav-li"><a href="">mao</a></li>
+        <li class="nav-li"><a href="">doc</a></li>
+      </ul>
+    </nav>
+  </header>
   <h1>HTML Club<br>
-    <span>the club for pogramers.</span>
+    <span class="sub-intro">the club for pogramers.</span>
   </h1>
 </body>
 </html>
