--- a/Home.html
+++ b/Home.html
@@ -9,17 +9,28 @@
 </head>
 <body>
   <header>
-    <nav>
-      <ul class="nav-ul">
-        <li class="nav-li"><a href="">how</a></li>
-        <li class="nav-li"><a href="">cat</a></li>
-        <li class="nav-li"><a href="">mao</a></li>
-        <li class="nav-li"><a href="">doc</a></li>
+<div class="container">
+
+  <h1 class="logo">html<span>club</span></h1>
+
+  <nav class="site-nav">
+      <ul>
+        <li><a href=""><i class="fa fa-home site-nav--icon"></i>Home</a></li>
+        <li><a href=""><i class="fa fa-info site-nav--icon"></i>About</a></li>
+        <li><a href=""><i class="fa fa-pencil site-nav--icon"></i>Blog</a></li>
+        <li><a href=""><i class="fa fa-usd site-nav--icon"></i>Pricing</a></li>
+        <li><a href=""><i class="fa fa-envelope site-nav--icon"></i>Contact</a></li>
       </ul>
-    </nav>
-  </header>
-  <h1>HTML Club<br>
-    <span class="sub-intro">the club for pogramers.</span>
-  </h1>
+  </nav>
+
+  <div class="menu-toggle">
+    <div class="hamburger"></div>
+  </div>
+
+</div>
+
+</header>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
+<script src="Home.js" charset="utf-8"></script>
 </body>
 </html>
