--- a/Home.html
+++ b/Home.html
@@ -17,8 +17,8 @@
       <ul>
         <li><a href=""><i class="fa fa-home site-nav--icon"></i>Home</a></li>
         <li><a href=""><i class="fa fa-info site-nav--icon"></i>About</a></li>
-        <li><a href=""><i class="fa fa-pencil site-nav--icon"></i>Blog</a></li>
-        <li><a href=""><i class="fa fa-usd site-nav--icon"></i>Pricing</a></li>
+        <li><a href=""><i class="fa fa-pencil site-nav--icon"></i>Join</a></li>
+        <li><a href=""><i class="fa fa-usd site-nav--icon"></i>Develope</a></li>
         <li><a href=""><i class="fa fa-envelope site-nav--icon"></i>Contact</a></li>
       </ul>
   </nav>
