--- a/Home.html
+++ b/Home.html
@@ -30,7 +30,9 @@
 </div>
 
 </header>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
-<script src="Home.js" charset="utf-8"></script>
+<div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
+  <script src="Home.js" charset="utf-8"></script>
+</div>
 </body>
 </html>
