--- a/Home.html
+++ b/Home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Hello, world!</title>
+  <title>html club</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
@@ -30,6 +30,23 @@
   </div>
 
 </header>
+<section class="section-1">
+
+</section>
+<section class="section-2">
+
+</section>
+<section class="section-3">
+
+</section>
+<section class="section-4">
+
+</section>
+<footer>
+  <ul>
+  
+  </ul>
+</footer>
 <div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
   <script src="Home.js" charset="utf-8"></script>
