--- a/Home.html
+++ b/Home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>html club</title>
+  <title>HTMLCLUB</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
@@ -43,9 +43,10 @@
 
 </section>
 <footer>
-  <ul>
-  
-  </ul>
+  <div class="">
+    <h3>HTMLCLUB</h3>
+    <p class="footer-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa repellat sapiente, recusandae repudiandae suscipit!</p>
+  </div>
 </footer>
 <div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
