--- a/index.html
+++ b/index.html
@@ -31,18 +31,19 @@
 
 </header>
 <section class="section-1">
-  <img src="" alt="">
   <div class="intro-card">
     <div class="inner-card">
       <h1>Page Title</h1>
       <p>This is a Paragraph. Click on "Edit Text" or double click on the text box to start editing the content and make sure to add any relevant details or information that you want to share with your visitors.</p>
-      <button class="join-button" type="button" name="button">
+      <button class="join-button" onclick="window.location.href='https://w3docs.com';" name="button">
       JOIN</button>
     </div>
   </div>
+  <p class="copy-right">Photo by <a href="https://unsplash.com/@der_maik_?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Maik Jonietz</a> on <a href="https://unsplash.com/s/photos/html?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+  </p>
 </section>
 <section class="section-2">
-
+  <h1></h1>
 </section>
 <section class="section-3">
 
