--- a/index.html
+++ b/index.html
@@ -43,7 +43,42 @@
   </p>
 </section>
 <section class="section-2">
-  <h1></h1>
+  <div class="s2content">
+    <h1>Developers</h1>
+    <div class="row">
+  <div class="column">
+    <div class="card2">
+      <h3>Card 1</h3>
+      <p>Some text</p>
+      <p>Some text</p>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card2">
+      <h3>Card 2</h3>
+      <p>Some text</p>
+      <p>Some text</p>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card2">
+      <h3>Card 3</h3>
+      <p>Some text</p>
+      <p>Some text</p>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card2">
+      <h3>Card 4</h3>
+      <p>Some text</p>
+      <p>Some text</p>
+    </div>
+  </div>
+</div>
+  </div>
 </section>
 <section class="section-3">
 
