--- a/index.html
+++ b/index.html
@@ -45,38 +45,74 @@
 <section class="section-2">
   <div class="s2content">
     <h1>Developers</h1>
-    <div class="row">
-  <div class="column">
-    <div class="card2">
-      <h3>Card 1</h3>
-      <p>Some text</p>
-      <p>Some text</p>
-    </div>
+<div class="card-content">
+  <div class="row">
+<div class="column">
+  <div class="card2">
+    <h3>Card 1</h3>
+    <p>Some text</p>
+    <p>Some text</p>
   </div>
+</div>
 
-  <div class="column">
-    <div class="card2">
-      <h3>Card 2</h3>
-      <p>Some text</p>
-      <p>Some text</p>
-    </div>
+<div class="column">
+  <div class="card2">
+    <h3>Card 2</h3>
+    <p>Some text</p>
+    <p>Some text</p>
   </div>
+</div>
 
-  <div class="column">
-    <div class="card2">
-      <h3>Card 3</h3>
-      <p>Some text</p>
-      <p>Some text</p>
-    </div>
+<div class="column">
+  <div class="card2">
+    <h3>Card 3</h3>
+    <p>Some text</p>
+    <p>Some text</p>
   </div>
+</div>
 
-  <div class="column">
-    <div class="card2">
-      <h3>Card 4</h3>
-      <p>Some text</p>
-      <p>Some text</p>
-    </div>
+<div class="column">
+  <div class="card2">
+    <h3>Card 4</h3>
+    <p>Some text</p>
+    <p>Some text</p>
   </div>
+</div>
+</div>
+<hr>
+<div class="row">
+<div class="column">
+  <div class="card2">
+    <h3>Card 1</h3>
+    <p>Some text</p>
+    <p>Some text</p>
+  </div>
+</div>
+
+<div class="column">
+  <div class="card2">
+    <h3>Card 2</h3>
+    <p>Some text</p>
+    <p>Some text</p>
+  </div>
+</div>
+
+<div class="column">
+  <div class="card2">
+    <h3>Card 3</h3>
+    <p>Some text</p>
+    <p>Some text</p>
+  </div>
+</div>
+
+<div class="column">
+  <div class="card2">
+    <h3>Card 4</h3>
+    <p>Some text</p>
+    <p>Some text</p>
+  </div>
+</div>
+</div>
 </div>
   </div>
 </section>
