--- a/index.html
+++ b/index.html
@@ -45,79 +45,98 @@
 <section class="section-2">
   <div class="s2content">
     <h1>Developers</h1>
-<div class="card-content">
-  <div class="row">
-<div class="column">
-  <div class="card2">
-    <h3>Card 1</h3>
-    <p>Some text</p>
-    <p>Some text</p>
-  </div>
-</div>
+    <div class="card-content">
+      <div class="row">
+        <div class="column">
+          <div class="card2">
+            <h3>Card 1</h3>
+            <p>Some text</p>
+            <p>Some text</p>
+          </div>
+        </div>
 
-<div class="column">
-  <div class="card2">
-    <h3>Card 2</h3>
-    <p>Some text</p>
-    <p>Some text</p>
-  </div>
-</div>
+        <div class="column">
+          <div class="card2">
+            <h3>Card 2</h3>
+            <p>Some text</p>
+            <p>Some text</p>
+          </div>
+        </div>
 
-<div class="column">
-  <div class="card2">
-    <h3>Card 3</h3>
-    <p>Some text</p>
-    <p>Some text</p>
-  </div>
-</div>
+        <div class="column">
+          <div class="card2">
+            <h3>Card 3</h3>
+            <p>Some text</p>
+            <p>Some text</p>
+          </div>
+        </div>
 
-<div class="column">
-  <div class="card2">
-    <h3>Card 4</h3>
-    <p>Some text</p>
-    <p>Some text</p>
-  </div>
-</div>
-</div>
-<hr>
-<div class="row">
-<div class="column">
-  <div class="card2">
-    <h3>Card 1</h3>
-    <p>Some text</p>
-    <p>Some text</p>
-  </div>
-</div>
+        <div class="column">
+          <div class="card2">
+            <h3>Card 4</h3>
+            <p>Some text</p>
+            <p>Some text</p>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="column">
+          <div class="card2">
+            <h3>Card 1</h3>
+            <p>Some text</p>
+            <p>Some text</p>
+          </div>
+        </div>
 
-<div class="column">
-  <div class="card2">
-    <h3>Card 2</h3>
-    <p>Some text</p>
-    <p>Some text</p>
-  </div>
-</div>
+        <div class="column">
+          <div class="card2">
+            <h3>Card 2</h3>
+            <p>Some text</p>
+            <p>Some text</p>
+          </div>
+        </div>
 
-<div class="column">
-  <div class="card2">
-    <h3>Card 3</h3>
-    <p>Some text</p>
-    <p>Some text</p>
-  </div>
-</div>
+        <div class="column">
+          <div class="card2">
+            <h3>Card 3</h3>
+            <p>Some text</p>
+            <p>Some text</p>
+          </div>
+        </div>
 
-<div class="column">
-  <div class="card2">
-    <h3>Card 4</h3>
-    <p>Some text</p>
-    <p>Some text</p>
-  </div>
-</div>
-</div>
-</div>
+        <div class="column">
+          <div class="card2">
+            <h3>Card 4</h3>
+            <p>Some text</p>
+            <p>Some text</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 <section class="section-3">
-
+  <div class="s2content">
+    <h1>Our Work</h1>
+    <div class="OWC">
+      <ul class="web-list">
+        <h2 style="font-weight:lighter;">EEHpedia</h2>
+        <li class="web-list-li"><a href="">EEH-pedia</a></li>
+        <h2 style="font-weight:lighter;">Best Chicken</h2>
+        <li class="web-list-li"><a href="">Best-Chicken</a></li>
+        <h2 style="font-weight:lighter;">....</h2>
+        <li class="web-list-li"><a href="">loading</a></li>
+        <h2 style="font-weight:lighter;">....</h2>
+        <li class="web-list-li"><a href="">loading</a></li>
+        <h2 style="font-weight:lighter;">....</h2>
+        <li class="web-list-li"><a href="">loading</a></li>
+        <h2 style="font-weight:lighter;">....</h2>
+        <li class="web-list-li"><a href="">loading</a></li>
+      </ul>
+        <img class="side-img" src="max-baskakov-OzAeZPNsLXk-unsplash.jpg" alt="">
+      </div>
+    </div>
 </section>
 <section class="section-4">
 
